fsarchiver: Filesystem Archiver for Linux [http://www.fsarchiver.org]
=====================================================================
* 0.6.18:
  - Prepared release sources using autoconf-2.69 to add support for new architectures (RHBZ#925370)
  - Applied patch from Berix to preserve the number of inode blocks per group on ext filesystems
* 0.6.17 (2013-02-25):
  - Implemented "mkfsopt" restfs option to pass extra options to mkfs (Michael Moninski)
  - Fixed parsing of "/proc/self/mountinfo" (mount options were not parsed on new systems)
  - Removed the ebuild for gentoo as fsarchiver is now in the official portage tree
* 0.6.16 (2013-02-07):
  - Fixed mke2fs requirement for the "ext_attr" feature (affects RHLE5/CentOS5)
  - Fixed parsing of "/proc/self/mountinfo" for systemd based systems
* 0.6.15 (2012-06-02):
  - Added support for recent ext4 features (up to linux-3.4 / e2fsprogs-1.42)
* 0.6.14 (2012-06-02):
  - Added support for recent btrfs features (up to linux-3.4)
  - Fixed compilation warnings (variable ‘res’ set but not used)
* 0.6.13 (2012-03-04):
  - Fixed detection of the root filesystem using "/proc/self/mountinfo" instead of "/proc/mounts"
* 0.6.12 (2010-12-25):
  - Fix: get correct mount info for root device when not listed in /proc/mounts (eg: missing "/dev/root")
* 0.6.11 (2010-12-01):
  - Updated supported btrfs compat flags to make it work with btrfs-2.6.35
  - The -c/--cryptpass option now supports interactive passwords: use "-c -"
* 0.6.10 (2010-05-09):
  - Fixed support of symbolic links on ntfs filesystems with ntfs3g >= 2010.3.6
* 0.6.9 (2010-05-04):
  - Fix in probe: show devmapper/lvm volumes even when /dev/dm-xx does not exist
  - Fixed restoration of very small archives (archive < 4K)
  - Fix error handling in restoration: consider ENOSPC as a fatal error and other fixes
  - Fix: remove all volumes of the archive instead of just the first one if save fails
* 0.6.8 (2010-02-20):